syntax = "proto3";

package boardgames_backend.api;

import "google/protobuf/timestamp.proto";
import "google/protobuf/any.proto";
import "google/protobuf/empty.proto";
import "api/query.proto";

message Event {
    string event_id = 1;
    string event_type = 2;
    string event_entity = 3;
    int64 event_version = 4;
    google.protobuf.Timestamp event_timestamp = 5;
    google.protobuf.Any event_payload = 6;

    message AppendRequest {
        string id = 1;
        repeated Event events = 2;
    }

    message ScanRequest {
        string id = 1;
        boardgames_backend.api.QueryOperator operator = 2;
        boardgames_backend.api.QueryParam start = 3;
        boardgames_backend.api.QueryParam end = 4;
    }

    message LatestRequest {
        string id = 1;
    }
}

service EventServices {
    rpc Append(Event.AppendRequest) returns (google.protobuf.Empty) {}
    rpc Scan(Event.ScanRequest) returns (stream Event) {}
    rpc Latest(Event.LatestRequest) returns (Event) {}
}